Fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,9 @@
   border-style: solid;
   border-width: 0 0 1px 4px;
 }
+.navbar-brand {
+  margin-right: 6px;
+}
 .navbar-brand img {
   width: 3rem;
   height: 3rem;
